--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">coroutinestest</string>
+    <string name="username">UserName</string>
+    <string name="password">Password</string>
+    <string name="submit">Submit</string>
 </resources>
